# chat-digest

./: .gitignore  CHRONICAL-INTEGRATION.md  README.md  VISION.md  pyproject.toml  test_chronicle.csv  test_patterns.csv
src/chat_digest/: __init__.py  amuse_bouche.py  chronicle.py  cli.py  code_extraction.py  entities.py  formats.py  importance.py  incremental.py  llm.py  parser.py  patterns.py  resumption.py  schemas.py  summarize.py  temporal.py
tests/: test_chronicle.py  test_code_extraction.py  test_entities.py  test_formats.py  test_importance.py  test_incremental.py  test_parser.py  test_patterns.py  test_resumption.py  test_temporal.py
