[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "chat-digest"
version = "0.1.0"
description = "Parse markdown chat transcripts into structured JSON with concise handoff briefs."
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "markdown-it-py>=3.0",
  "pydantic>=2.7",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

[project.scripts]
chat-digest = "chat_digest.cli:app"

[tool.hatch.build]
packages = ["src/chat_digest"]
